[project]
name = "decision-making"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "base>=0.0.0",
    "data>=0.4",
    "gurobipy>=12.0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "metrics>=0.3.3",
    "numpy>=2.2.2",
]
